--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amir Blazevic - Portfolio</title>
+    <title>Amir Blazevic - Technical Product & UX/UI Lead</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -12,12 +12,15 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-content">
-            <div class="logo">AB</div>
+            <div class="logo">
+                <img src="assets/logo-blzc.svg" alt="BLZC Logo" class="logo-img">
+            </div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="/assets/resume.pdf" class="resume-button" download>Resume <i class="fas fa-file-download"></i></a></li>
             </ul>
         </div>
     </nav>
@@ -26,8 +29,8 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>Amir Blazevic</h1>
-            <p class="subtitle">Full Stack Developer</p>
-            <p class="tagline">Building digital experiences that matter</p>
+            <p class="subtitle">Technical Product & UX/UI Lead</p>
+            <p class="tagline">Driving innovation in IoT and connected systems</p>
             <div class="cta-buttons">
                 <a href="#contact" class="cta-primary">Get in Touch</a>
                 <a href="#experience" class="cta-secondary">View Experience</a>
@@ -45,33 +48,33 @@
             <h2>About Me</h2>
             <div class="about-grid">
                 <div class="about-text">
-                    <p>I'm a passionate Full Stack Developer with a keen eye for creating elegant solutions to complex problems. With expertise in modern web technologies and a commitment to clean, efficient code, I help businesses bring their digital visions to life.</p>
+                    <p>Solutions driven Technical Product & UX/UI Lead with extensive experience in enterprise software and connected systems. I drive strategic product direction while maintaining hands-on involvement in technical and design decisions. I excel in leading cross-functional teams that develop solutions combining IoT infrastructure with emerging AI technologies, thriving in remote-first environments and consistently delivering innovative yet robust products for international markets.</p>
                     <div class="skills">
                         <h3>Technical Skills</h3>
                         <div class="skill-tags">
-                            <span>JavaScript</span>
-                            <span>React</span>
-                            <span>Node.js</span>
-                            <span>Python</span>
-                            <span>SQL</span>
-                            <span>AWS</span>
-                            <span>Docker</span>
-                            <span>Git</span>
+                            <span>IoT Platforms</span>
+                            <span>UX/UI Design</span>
+                            <span>Product Management</span>
+                            <span>Agile Methodologies</span>
+                            <span>Machine Learning</span>
+                            <span>Enterprise Software</span>
+                            <span>Team Leadership</span>
+                            <span>Digital Strategy</span>
                         </div>
                     </div>
                 </div>
                 <div class="about-stats">
                     <div class="stat-item">
-                        <h3>5+</h3>
+                        <h3>10+</h3>
                         <p>Years Experience</p>
                     </div>
                     <div class="stat-item">
-                        <h3>50+</h3>
-                        <p>Projects Completed</p>
+                        <h3>30K+</h3>
+                        <p>Connected Assets</p>
                     </div>
                     <div class="stat-item">
-                        <h3>20+</h3>
-                        <p>Happy Clients</p>
+                        <h3>30+</h3>
+                        <p>Team Members Led</p>
                     </div>
                 </div>
             </div>
@@ -86,28 +89,19 @@
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <h3>Senior Full Stack Developer</h3>
-                        <p class="company">Tech Innovation Labs</p>
-                        <p class="period">2022 - Present</p>
-                        <p class="description">Leading development of enterprise-scale web applications, mentoring junior developers, and implementing best practices for code quality and team collaboration.</p>
+                        <h3>Technical Product Lead / UX/UI Lead</h3>
+                        <p class="company">A-SAFE Ltd</p>
+                        <p class="period">2017 - Present</p>
+                        <p class="description">Leading end-to-end product development of IoT safety solutions, managing an innovative platform connecting over 30,000 safety assets. Developed commercial models for 10 new technical concepts, including RackEye with expected £1B turnover. Leading a cross-functional team of 30 specialists across software, hardware, UX/UI design, and testing.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <h3>Full Stack Developer</h3>
-                        <p class="company">Digital Solutions Inc.</p>
-                        <p class="period">2020 - 2022</p>
-                        <p class="description">Developed and maintained multiple client projects, implemented new features, and optimized application performance.</p>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-content">
-                        <h3>Junior Developer</h3>
-                        <p class="company">StartUp Ventures</p>
-                        <p class="period">2018 - 2020</p>
-                        <p class="description">Started career working on frontend development and gradually expanded into full stack development.</p>
+                        <h3>Digital Product Lead</h3>
+                        <p class="company">Waxmans Group</p>
+                        <p class="period">2012 - 2017</p>
+                        <p class="description">Established company's first digital presence, architecting and delivering nine distinct e-commerce sites and a unified portal platform. Led a nine-person digital team, implemented enterprise-grade infrastructure, and established comprehensive digital workflows and training programs.</p>
                     </div>
                 </div>
             </div>
@@ -121,25 +115,24 @@
             <div class="contact-container">
                 <div class="contact-info">
                     <h3>Let's Connect</h3>
-                    <p>I'm always open to discussing new projects, creative ideas, or opportunities to be part of your visions.</p>
+                    <p>I'm always open to discussing new projects, innovative ideas, or opportunities to collaborate on transformative solutions.</p>
                     <div class="contact-details">
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <p>email@example.com</p>
+                            <p>amirblazevic@outlook.com</p>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
-                            <p>+1 234 567 890</p>
+                            <p>+44 (0) 7432 425 125</p>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
-                            <p>San Francisco, CA</p>
+                            <p>Huddersfield, West Yorkshire</p>
                         </div>
                     </div>
                     <div class="social-links">
                         <a href="#" target="_blank"><i class="fab fa-github"></i></a>
                         <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
                 <form class="contact-form">
